FlightPath 5.x Changelog
========================

2016-09-28
  Fixed bug where searching for lastname, firstname broke the search. 
  

2016-09-23
  Improved error handling for Execute PHP function.


2016-09-22
  Added extra documentation for the structure of term ID's setting, and an additional setting to the course search code to support the [Y+1]
  year adjust code.
  

2016-09-10
  Made various changes so that pie charts are rendered using a hook-able theme function, similar to Course Row, Footnot, etc.
  This allows outside modules to modify the pie charts.
  
  Also, the pie charts by default now list out progress for every degree the student is enrolled in.  
  

2016-08-24
  Changed system.install so that datetime field is given a real date (1970-01-01 00:00:01), not all zeros, by default.  This was
  necessary because on some MySQL configurations, zero dates are not allowed.
  
  Fixed bug in stats and batch modules, where they were not using constant names correctly (this is to make compatible with MySQL 5.7+)
  
  Made note in db errors that contain the text sql_mode= to see a documentation page regarding how to correct that.
  
  Adjusted install.php, settings.php, and _DatabaseHandler so that the db_port is its own value now.
  

2016-08-23
  Removed mysql_* functions from installation and settings files, to make PDO compatible and PHP 7 compatible.


2016-08-20
  Added setting for default 'allow dynamic' value.
  
  Fixed bug where draft mode wasn't being selected correctly when fetching degree_id.
  
  Added more CSS class names to elements on degree edit page.
  
  Adjusted CSS in packaged themes' style.css files for what if selection screen.
  
  Fixed What If selection so it pays attention to whether or not the degree was allowed
  to be combined with any other degree.
  

2016-08-04
  Fixed queries in admin (for viewing watchdog logs) to use better PDO system.
  